--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="https://www.yogisangels.com/" />
 
   <!-- Favicon (adjust if needed) -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/yogisangels/images/favicon.ico" type="image/x-icon" />
 
   <!-- Open Graph / Social -->
   <meta property="og:title" content="Yogi's Angels | International Entertainment for Luxury Events" />
@@ -798,7 +798,7 @@
     <header class="ya-header">
       <div class="ya-container">
         <div class="ya-logo-block">
-          <img src="images/logo.jpg" alt="Yogi's Angels Logo" class="ya-logo-img" />
+          <img src="/yogisangels/images/logo.jpg" alt="Yogi's Angels Logo" class="ya-logo-img" />
           <div class="ya-logo-heading">YOGI'S ANGELS</div>
           <div class="ya-logo-subtitle">INTERNATIONAL ENTERTAINMENT</div>
         </div>
@@ -898,7 +898,7 @@
         <!-- Adjust image paths if needed -->
         <a href="pyro/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/pyro_b.jpg" alt="Pyro Angels – fire and special effects act" />
+            <img src="/yogisangels/images/mp/pyro_b.jpg" alt="Pyro Angels – fire and special effects act" />
           </div>
           <div class="ya-card-title">Pyro Angels</div>
           <div class="ya-card-meta">
@@ -909,7 +909,7 @@
 
         <a href="pa/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/pa_b.jpg" alt="Phoenix Angels aerial act" />
+            <img src="/yogisangels/images/mp/pa_b.jpg" alt="Phoenix Angels aerial act" />
           </div>
           <div class="ya-card-title">Phoenix Angels</div>
           <div class="ya-card-meta">
@@ -920,7 +920,7 @@
 
         <a href="ha/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/ha_b.jpg" alt="Helio Angels aerial performance" />
+            <img src="/yogisangels/images/mp/ha_b.jpg" alt="Helio Angels aerial performance" />
           </div>
           <div class="ya-card-title">Helio Angels</div>
           <div class="ya-card-meta">
@@ -931,7 +931,7 @@
 
         <a href="ss/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/ss_b.jpg" alt="Signature Show by Yogi's Angels" />
+            <img src="/yogisangels/images/mp/ss_b.jpg" alt="Signature Show by Yogi's Angels" />
           </div>
           <div class="ya-card-title">Signature Show</div>
           <div class="ya-card-meta">
@@ -942,7 +942,7 @@
 
         <a href="ta/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/ta_b.jpg" alt="Trio Aerial Act" />
+            <img src="/yogisangels/images/mp/ta_b.jpg" alt="Trio Aerial Act" />
           </div>
           <div class="ya-card-title">Trio Aerial Act</div>
           <div class="ya-card-meta">
@@ -953,7 +953,7 @@
 
         <a href="cha/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/cha_b.jpg" alt="Cluster Helio Angel act" />
+            <img src="/yogisangels/images/mp/cha_b.jpg" alt="Cluster Helio Angel act" />
           </div>
           <div class="ya-card-title">Cluster Helio Angel</div>
           <div class="ya-card-meta">
@@ -964,7 +964,7 @@
 
         <a href="tha/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/tha_b.jpg" alt="Trio Helio Angels act" />
+            <img src="/yogisangels/images/mp/tha_b.jpg" alt="Trio Helio Angels act" />
           </div>
           <div class="ya-card-title">Trio Helio Angels</div>
           <div class="ya-card-meta">
@@ -989,7 +989,7 @@
       <div class="ya-grid">
         <a href="laa/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/laa_b.jpg" alt="Laser Angels act" />
+            <img src="/yogisangels/images/mp/laa_b.jpg" alt="Laser Angels act" />
           </div>
           <div class="ya-card-title">Laser Angels</div>
           <div class="ya-card-meta">
@@ -1000,7 +1000,7 @@
 
         <a href="qa/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/qa_b.jpg" alt="Quick Angels act" />
+            <img src="/yogisangels/images/mp/qa_b.jpg" alt="Quick Angels act" />
           </div>
           <div class="ya-card-title">Quick Angels</div>
           <div class="ya-card-meta">
@@ -1011,7 +1011,7 @@
 
         <a href="fa/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/fa_b.jpg" alt="Fusion Angels" />
+            <img src="/yogisangels/images/mp/fa_b.jpg" alt="Fusion Angels" />
           </div>
           <div class="ya-card-title">Fusion Angels</div>
           <div class="ya-card-meta">
@@ -1022,7 +1022,7 @@
 
         <a href="cb/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/scb_b.jpg" alt="Swarovski Champagne Chandelier Bar Act" />
+            <img src="/yogisangels/images/mp/scb_b.jpg" alt="Swarovski Champagne Chandelier Bar Act" />
           </div>
           <div class="ya-card-title">Champagne Chandelier</div>
           <div class="ya-card-meta">
@@ -1033,7 +1033,7 @@
 
         <a href="mb/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/mb_b.jpg" alt="Martini Bar Act" />
+            <img src="/yogisangels/images/mp/mb_b.jpg" alt="Martini Bar Act" />
           </div>
           <div class="ya-card-title">Martini Bar</div>
           <div class="ya-card-meta">
@@ -1044,7 +1044,7 @@
 
         <a href="cl/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/cl_b.jpg" alt="Champagne Lady walkabout act" />
+            <img src="/yogisangels/images/mp/cl_b.jpg" alt="Champagne Lady walkabout act" />
           </div>
           <div class="ya-card-title">Champagne Lady</div>
           <div class="ya-card-meta">
@@ -1055,7 +1055,7 @@
 
         <a href="dth/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/dth_b.jpg" alt="Dancing Tables act" />
+            <img src="/yogisangels/images/mp/dth_b.jpg" alt="Dancing Tables act" />
           </div>
           <div class="ya-card-title">Dancing Tables</div>
           <div class="ya-card-meta">
@@ -1080,7 +1080,7 @@
       <div class="ya-grid">
         <a href="ssa/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/ssa_b.jpg" alt="Shooting Star Angels act" />
+            <img src="/yogisangels/images/mp/ssa_b.jpg" alt="Shooting Star Angels act" />
           </div>
           <div class="ya-card-title">Shooting Star Angels</div>
           <div class="ya-card-meta">
@@ -1091,7 +1091,7 @@
 
         <a href="gpp/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/gpp_b.jpg" alt="Glow Paint Party" />
+            <img src="/yogisangels/images/mp/gpp_b.jpg" alt="Glow Paint Party" />
           </div>
           <div class="ya-card-title">Glow Paint Party</div>
           <div class="ya-card-meta">
@@ -1102,7 +1102,7 @@
 
         <a href="rc/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/rc_b.jpg" alt="Rio Carnival dancers" />
+            <img src="/yogisangels/images/mp/rc_b.jpg" alt="Rio Carnival dancers" />
           </div>
           <div class="ya-card-title">Rio Carnival</div>
           <div class="ya-card-meta">
@@ -1113,7 +1113,7 @@
 
         <a href="sps/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/sps_b.jpg" alt="Swimming Pool Show" />
+            <img src="/yogisangels/images/mp/sps_b.jpg" alt="Swimming Pool Show" />
           </div>
           <div class="ya-card-title">Swimming Pool Show</div>
           <div class="ya-card-meta">
@@ -1124,7 +1124,7 @@
 
         <a href="lbg/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/lbg_b.jpg" alt="LED Bubble Gymnasts" />
+            <img src="/yogisangels/images/mp/lbg_b.jpg" alt="LED Bubble Gymnasts" />
           </div>
           <div class="ya-card-title">LED Bubble Gymnasts</div>
           <div class="ya-card-meta">
@@ -1135,7 +1135,7 @@
 
         <a href="mystrees/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/mystrees_b.jpg" alt="Mystrees walkabout act" />
+            <img src="/yogisangels/images/mp/mystrees_b.jpg" alt="Mystrees walkabout act" />
           </div>
           <div class="ya-card-title">Mystrees</div>
           <div class="ya-card-meta">
@@ -1146,7 +1146,7 @@
 
         <a href="sbs/index.html" class="ya-card">
           <div class="ya-card-img">
-            <img src="images/mp/sbs_b.jpg" alt="Soap Bubble Show" />
+            <img src="/yogisangels/images/mp/sbs_b.jpg" alt="Soap Bubble Show" />
           </div>
           <div class="ya-card-title">Soap Bubble Show</div>
           <div class="ya-card-meta">
@@ -1221,7 +1221,7 @@
         <div>
           <div class="ya-footer-title">Yogi's Angels</div>
           <div class="ya-footer-logo-small">
-            <img src="images/logo.jpg" alt="Yogi's Angels Logo small" />
+            <img src="/yogisangels/images/logo.jpg" alt="Yogi's Angels Logo small" />
             <div class="ya-footer-logo-text">
               <span>YOGI'S ANGELS</span>
               <span>International Entertainment</span>
